Modify welcome.css to prevent scrollbar appearing unneccesarily

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -13,16 +13,7 @@
   --clr-accent: #555;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   font-size: var(--fs-body);
   font-family: var(--ff-primary);
   color: var(--clr-dark);
